Change main file name to index

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
 
 
 
-<script src="js/index.js"></script>
+<script src="js/index.js" type="module"></script>
+    <script src="JS/region-descriptions.js" type="module"></script>
 </body>
 </html>
