--- a/scenarios.html
+++ b/scenarios.html
@@ -16,7 +16,7 @@
         <header>
             <!-- <div id="logo"></div> -->
             <div class="nav">
-                <span class="nav-el"><a href="world.html">Świat</a></span>
+                <span class="nav-el"><a href="index.html">Świat</a></span>
                 <span class="nav-el"><a href="create-character.html">Stwórz postać</a></span>
                 <span class="nav-el"><a href="#">Scenariusze</a></span>
             </div>
@@ -48,7 +48,8 @@
         </footer>
     </div>
     
-    <script src="js/index.js"></script>
+    <script src="js/index.js" type="module"></script>
+    <script src="JS/region-descriptions.js" type="module"></script>
 </body>
 <script>
     setTimeout(function() {
