--- a/create-character.html
+++ b/create-character.html
@@ -29,6 +29,7 @@
     </div>
     
 
-    <script src="js/index.js"></script>
+    <script src="js/index.js" type="module"></script>
+    <script src="JS/region-descriptions.js" type="module"></script>
 </body>
 </html>
