Correct paths in files to index

--- a/create-character.html
+++ b/create-character.html
@@ -12,7 +12,7 @@
 <div class="hidden-body" style="opacity: 0;">
         <header>
             <div class="nav">
-                <span class="nav-el"><a href="world.html">Świat</a></span>
+                <span class="nav-el"><a href="index.html">Świat</a></span>
                 <span class="nav-el"><a href="#">Stwórz postać</a></span>
                 <span class="nav-el"><a href="scenarios.html">Scenariusze</a></span>
             </div>
