Make temporary changes to events on index.js

--- a/create-character.html
+++ b/create-character.html
@@ -29,7 +29,7 @@
     </div>
     
 
-    <script src="js/index.js" type="module"></script>
-    <script src="JS/region-descriptions.js" type="module"></script>
+    <script src="JS/region-descriptions.js"></script>
+    <script src="JS/index.js"></script>
 </body>
 </html>
