--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
 
 
-<script src="js/index.js" type="module"></script>
-    <script src="JS/region-descriptions.js" type="module"></script>
+<script src="JS/region-descriptions.js"></script>
+<script src="JS/index.js"></script>
 </body>
 </html>
