--- a/scenarios.html
+++ b/scenarios.html
@@ -48,8 +48,8 @@
         </footer>
     </div>
     
-    <script src="js/index.js" type="module"></script>
-    <script src="JS/region-descriptions.js" type="module"></script>
+    <script src="JS/region-descriptions.js"></script>
+    <script src="JS/index.js"></script>
 </body>
 <script>
     setTimeout(function() {
